--- a/frontend/html/pages/register.html
+++ b/frontend/html/pages/register.html
@@ -501,7 +501,7 @@
 
 
 <script type="module">
-    import { initializeTrading } from '../../js/controllers/trading.js';
+    import { initializeTrading } from '../../js/trading.js';
     document.addEventListener('DOMContentLoaded', initializeTrading);
 </script>
 
