--- a/frontend/html/pages/trading.html
+++ b/frontend/html/pages/trading.html
@@ -106,11 +106,11 @@
 <!-- Footer -->
 <div id="footer-placeholder"></div>
 
-  
-  <script type="module">
-    import { initializeTrading } from '../../js/trading.js';
-    document.addEventListener('DOMContentLoaded', initializeTrading);
-  </script>
+<!-- Scripts de Trading -->
+<script type="module">
+  import { initializeTrading } from '../../js/trading.js';
+  document.addEventListener('DOMContentLoaded', initializeTrading);
+</script>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
