--- a/frontend/html/pages/register.html
+++ b/frontend/html/pages/register.html
@@ -150,9 +150,9 @@
                     <input type="checkbox" id="termsAccept" required />
                     <span>
               Acepto los
-              <a href="terms.html" class="terms-link">Términos y Condiciones</a>
+              <a href="terminos-y-condiciones.html" class="terms-link">Términos y Condiciones</a>
               y la
-              <a href="privacy.html" class="terms-link">Política de Privacidad</a>.
+              <a href="politica-de-privacidad.html" class="terms-link">Política de Privacidad</a>.
             </span>
                 </label>
             </div>
