--- a/frontend/html/pages/footer.html
+++ b/frontend/html/pages/footer.html
@@ -46,8 +46,8 @@
             <ul>
                 <li><a href="terms.html">Términos de Uso</a></li>
                 <li><a href="privacy.html">Privacidad</a></li>
-                <li><a href="disclaimer.html">Disclaimer</a></li>
                 <li><a href="contact.html">Contacto</a></li>
+                <li><a href="AccesAdmin.html">Acceso Administrativo</a></li>
             </ul>
         </div>
     </div>
